fix: flickering in when flags change

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,3 +30,8 @@ h2 {
   font-size: 2rem;
   line-height: 1.1;
 }
+
+[hidden] {
+  visibility: hidden;
+  display: block;
+}
